--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,13 +1,16 @@
 {
   "name": "portfolio",
   "private": true,
+  "homepage": "https://mrkreyees21.github.io/mrkIT/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fontsource/poppins": "^5.1.1",
@@ -31,6 +34,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^6.0.5"
